--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sreeman Reddy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,14 +18,11 @@
   <meta name="twitter:title" content="Yo, I'm Sreeman." />
   <meta name="twitter:description" content="The &quot;Unconventional Growth&quot; guy from India" />
   <meta name="twitter:image" content="https://static.riff.new/public/vast-resonant-cello-q4y9/Screenshot%202025-12-24%20at%2012.49.58.png" />
-  <link rel="icon" href="media/Thumbsup.png" />
 
   <style>
     @font-face {
       font-family: "Geist";
       src: url("/Assets/Fonts/Geist.woff2") format("woff2");
-      font-weight: 400;
-      font-style: normal;
       font-display: swap;
     }
 
@@ -33,20 +30,21 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
     }
 
     html, body {
       width: 100%;
       height: 100%;
       background: #000;
-      overflow: hidden;
       font-family: "Geist", system-ui, sans-serif;
+      overflow: hidden;
     }
 
     body {
       background-image:
-        linear-gradient(rgba(255, 255, 255, 0.060) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255, 255, 255, 0.060) 1px, transparent 1px);
+        linear-gradient(rgba(255,255,255,0.06) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(255,255,255,0.06) 1px, transparent 1px);
       background-size: 40px 40px;
     }
 
@@ -56,12 +54,14 @@
       inset: 0;
       background: radial-gradient(ellipse at center, rgba(0,0,0,0) 30%, rgba(0,0,0,0.9) 100%);
       pointer-events: none;
+      z-index: 1;
     }
 
     .stage {
       position: relative;
       width: 100%;
-      height: 100svh;
+      height: 100dvh;
+      overflow: hidden;
     }
 
     .text {
@@ -69,36 +69,76 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      max-width: min(900px, 90%);
+      max-width: 900px;
+      width: 90%;
       color: #fff;
-      font-size: clamp(1rem, 2.5vw, 1.25rem);
-      line-height: 1.45;
+      font-size: clamp(0.95rem, 2.5vw, 1.25rem);
+      line-height: 1.5;
       letter-spacing: 0.015em;
-      z-index: 2;
+      z-index: 4;
       text-align: center;
     }
 
     .asset {
       position: absolute;
-      width: clamp(64px, 20vw, 140px);
       height: auto;
-      z-index: 3;
+      z-index: 5;
       cursor: pointer;
       transition: transform 0.6s ease;
     }
 
-    .email { top: 15%; right: 20%; transform: rotate(20deg); }
-    .camera { top: 20%; right: 40%; transform: rotate(10deg); }
-    .linkedin { top: 30%; left: 18%; transform: rotate(-35deg); }
-    .call { bottom: 16%; left: 20%; transform: rotate(-10deg); width: 15%; }
-    .whatsapp { bottom: 10%; right: 42%; transform: rotate(-90deg); width: 15%; }
-    .headset { bottom: 20%; right: 18%; transform: rotate(20deg); width: 20%; }
-    .aeroplane { bottom: -5%; right: 15%; width: 22%; }
+    .email {
+      top: 15%;
+      right: 20%;
+      width: clamp(90px, 10vw, 140px);
+      transform: rotate(20deg);
+    }
+
+    .camera {
+      top: 20%;
+      right: 40%;
+      width: clamp(90px, 10vw, 140px);
+      transform: rotate(10deg);
+    }
+
+    .linkedin {
+      top: 30%;
+      left: 18%;
+      width: clamp(90px, 10vw, 140px);
+      transform: rotate(-35deg);
+    }
+
+    .call {
+      bottom: 16%;
+      left: 20%;
+      width: clamp(140px, 14vw, 220px);
+      transform: rotate(-10deg);
+    }
+
+    .whatsapp {
+      bottom: 10%;
+      right: 42%;
+      width: clamp(140px, 14vw, 220px);
+      transform: rotate(-90deg);
+    }
+
+    .headset {
+      bottom: 20%;
+      right: 18%;
+      width: clamp(180px, 18vw, 280px);
+      transform: rotate(20deg);
+    }
+
+    .aeroplane {
+      bottom: -5%;
+      right: 15%;
+      width: clamp(200px, 22vw, 320px);
+    }
 
     .sun {
       top: 6%;
       left: 30%;
-      width: 15%;
+      width: clamp(130px, 14vw, 200px);
     }
 
     .sun.rotate {
@@ -107,18 +147,20 @@
 
     img {
       display: block;
-      max-width: 100%;
+      width: 100%;
+      height: auto;
+      user-select: none;
     }
 
     .modal-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.7);
+      background: rgba(0,0,0,0.75);
       display: none;
       align-items: center;
       justify-content: center;
-      z-index: 10;
-      padding: 20px;
+      z-index: 20;
+      padding: 16px;
     }
 
     .modal {
@@ -127,7 +169,7 @@
       background: #000;
       border-radius: 24px;
       border: 2px solid #fff;
-      padding: 32px;
+      padding: 28px;
       color: #fff;
       position: relative;
     }
@@ -156,12 +198,13 @@
       border-radius: 14px;
       padding: 14px;
       color: #fff;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
       font-family: inherit;
+      font-size: 0.95rem;
     }
 
     .modal textarea {
-      min-height: 120px;
+      min-height: 110px;
       resize: none;
     }
 
@@ -169,7 +212,7 @@
       background: #fff;
       color: #000;
       border: none;
-      padding: 12px 28px;
+      padding: 12px 26px;
       border-radius: 999px;
       font-weight: 600;
       cursor: pointer;
@@ -178,7 +221,7 @@
 
     .close-btn {
       position: absolute;
-      top: 18px;
+      top: 16px;
       right: 18px;
       background: none;
       border: none;
@@ -191,20 +234,21 @@
 
 <body>
   <div class="stage">
-    <img class="asset sun" id="sun" src="Assets/Images/Sun.png" alt="Sun" />
-    <img class="asset email" src="Assets/Images/Email_Me.webp" alt="Email" onclick="openModal()" />
-    <img class="asset camera" src="Assets/Images/Camera.png" alt="Camera" onclick="window.open('https://instagram.com/sreemanrp','_blank')" />
-    <img class="asset linkedin" src="Assets/Images/Linkedin.png" alt="LinkedIn" onclick="window.open('https://www.linkedin.com/in/sreemanrp','_blank')" />
-    <img class="asset call" src="Assets/Images/Call_Me.png" alt="Call" onclick="window.open('https://cal.com/sreemanrp','_blank')" />
-    <img class="asset whatsapp" src="Assets/Images/iPhone17_ProMax_Whatsapp.png" alt="WhatsApp" onclick="window.open('https://wa.me/','_blank')" />
-    <img class="asset headset" id="headset" src="Assets/Images/AirPods Max.png" alt="Lo-fi Girl" />
-    <img class="asset aeroplane" src="Assets/Images/Aeroplane.png" alt="Call" onclick="window.open('https://x.com/sreemanrp','_blank')" />
+    <img class="asset sun" id="sun" src="Assets/Images/Sun.png" />
+    <img class="asset email" src="Assets/Images/Email_Me.webp" onclick="openModal()" />
+    <img class="asset camera" src="Assets/Images/Camera.png" onclick="window.open('https://instagram.com/sreemanrp','_blank')" />
+    <img class="asset linkedin" src="Assets/Images/Linkedin.png" onclick="window.open('https://www.linkedin.com/in/sreemanrp','_blank')" />
+    <img class="asset call" src="Assets/Images/Call_Me.png" onclick="window.open('https://cal.com/sreemanrp','_blank')" />
+    <img class="asset whatsapp" src="Assets/Images/iPhone17_ProMax_Whatsapp.png" onclick="window.open('https://wa.me/','_blank')" />
+    <img class="asset headset" id="headset" src="Assets/Images/AirPods Max.png" />
+    <img class="asset aeroplane" src="Assets/Images/Aeroplane.png" onclick="window.open('https://x.com/sreemanrp','_blank')" />
+
     <div class="text">
-      Yo, I'm Sreeman. I help founders (actually) use AI for growth. Spent 2025 as Brand Designer & Community Manager at Levellr. I'm an founder for 2+ years. I document everything and turn my ideas into inbound.
+      Yo, I'm Sreeman. I help founders (actually) use AI for growth. Spent 2025 as Brand Designer & Community Manager at Levellr. I'm a founder for 2+ years. I document everything and turn my ideas into inbound.
     </div>
   </div>
 
-  <iframe id="lofiPlayer" src="https://www.youtube.com/embed/jfKfPfyJRdk?enablejsapi=1&controls=0" allow="autoplay" style="display:none"></iframe>
+  <iframe id="lofiPlayer" src="https://www.youtube.com/embed/jfKfPfyJRdk?enablejsapi=1&controls=0&playsinline=1" allow="autoplay" style="display:none"></iframe>
 
   <div class="modal-overlay" id="emailModal">
     <div class="modal">
@@ -237,8 +281,7 @@
   function sendEmail() {
     const email = document.getElementById("userEmail").value;
     const message = document.getElementById("userMessage").value;
-    window.location.href =
-      `mailto:sreemanrp@gmail.com?subject=New message from ${encodeURIComponent(email)}&body=${encodeURIComponent(message)}`;
+    window.location.href = `mailto:sreemanrp@gmail.com?subject=New message from ${encodeURIComponent(email)}&body=${encodeURIComponent(message)}`;
   }
 
   modal.addEventListener("click", e => {
@@ -250,13 +293,11 @@
   });
 
   headset.addEventListener("click", () => {
-    if (!isPlaying) {
-      playerFrame.postMessage('{"event":"command","func":"playVideo","args":""}', "*");
-      isPlaying = true;
-    } else {
-      playerFrame.postMessage('{"event":"command","func":"pauseVideo","args":""}', "*");
-      isPlaying = false;
-    }
+    playerFrame.postMessage(
+      `{"event":"command","func":"${isPlaying ? "pauseVideo" : "playVideo"}","args":""}`,
+      "*"
+    );
+    isPlaying = !isPlaying;
   });
 </script>
 </body>
