--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <meta property="og:title" content="Yo, I'm Sreeman." />
   <meta property="og:description" content="The &quot;Unconventional Growth&quot; guy from India" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="Assets/Images/og.png" />
+  <meta property="og:image" content="https://sreeman.vercel.app/Assets/Images/og.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Yo, I'm Sreeman." />
   <meta name="twitter:description" content="The &quot;Unconventional Growth&quot; guy from India" />
-  <meta name="twitter:image" content="Assets/Images/og.png" />
+  <meta name="twitter:image" content="https://sreeman.vercel.app/Assets/Images/og.png" />
 
   <style>
     @font-face {
