--- a/test.html
+++ b/test.html
@@ -31,7 +31,6 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  /* PAGE WRAPPER */
   .page {
     display: flex;
     justify-content: center;
@@ -51,7 +50,6 @@
     margin-bottom: clamp(28px, 5vw, 48px);
   }
 
-  /* ROW STRUCTURE */
   .row {
     display: grid;
     grid-template-columns: 40px 1fr auto;
@@ -70,7 +68,7 @@
   .text {
     font-size: clamp(15px, 1.6vw, 16px);
     line-height: 1.65;
-    max-width: 68ch; /* keeps text readable on large screens */
+    max-width: 68ch;
   }
 
   .muted {
@@ -92,7 +90,6 @@
     text-decoration: underline;
   }
 
-  /* TABLET */
   @media (max-width: 900px) {
     .row {
       grid-template-columns: 32px 1fr auto;
@@ -100,22 +97,32 @@
     }
   }
 
-  /* MOBILE */
   @media (max-width: 600px) {
     .row {
-      grid-template-columns: 28px 1fr;
+      display: block;
+      margin: 10px 0;
+    }
+
+    .num {
+      display: inline-block;
+      width: auto;
+      margin-right: 12px;
+      font-size: 12px;
+    }
+
+    .text,
+    a.text {
+      display: inline;
+      font-size: 15px;
+      line-height: 1.7;
+      max-width: 100%;
     }
 
     .year {
       display: none;
     }
-
-    .text {
-      max-width: 100%;
-    }
   }
 
-  /* VERY SMALL DEVICES */
   @media (max-width: 360px) {
     .num {
       font-size: 12px;
@@ -123,14 +130,6 @@
 
     .text {
       font-size: 14px;
-    }
-  }
-
-  /* ACCESSIBILITY */
-  @media (prefers-reduced-motion: reduce) {
-    * {
-      animation: none !important;
-      transition: none !important;
     }
   }
 </style>
@@ -154,15 +153,11 @@
   <section>
     <div class="row">
       <span class="num">03</span>
-      <span class="text">
-        B.Tech student (3rd year), focused on artificial intelligence
-      </span>
+      <span class="text">B.Tech student (3rd year), focused on artificial intelligence</span>
     </div>
     <div class="row">
       <span class="num">04</span>
-      <span class="text">
-        and the study of decision-making in complex systems.
-      </span>
+      <span class="text">and the study of decision-making in complex systems.</span>
     </div>
   </section>
 
@@ -173,21 +168,15 @@
     </div>
     <div class="row">
       <span class="num">06</span>
-      <span class="text">
-        Applied machine learning and data-driven reasoning
-      </span>
+      <span class="text">Applied machine learning and data-driven reasoning</span>
     </div>
     <div class="row">
       <span class="num">07</span>
-      <span class="text">
-        System design for high-stakes environments
-      </span>
+      <span class="text">System design for high-stakes environments</span>
     </div>
     <div class="row">
       <span class="num">08</span>
-      <span class="text">
-        Empirical learning through implementation and analysis
-      </span>
+      <span class="text">Empirical learning through implementation and analysis</span>
     </div>
   </section>
 
@@ -198,16 +187,12 @@
     </div>
     <div class="row">
       <span class="num">10</span>
-      <span class="text">
-        Independent development and academic study
-      </span>
+      <span class="text">Independent development and academic study</span>
       <span class="year">2023 — Present</span>
     </div>
     <div class="row">
       <span class="num">11</span>
-      <span class="text">
-        AI models, data pipelines, and evaluation workflows
-      </span>
+      <span class="text">AI models, data pipelines, and evaluation workflows</span>
     </div>
   </section>
 
@@ -218,21 +203,15 @@
     </div>
     <div class="row">
       <span class="num">13</span>
-      <span class="text">
-        Technology reflects institutional intent
-      </span>
+      <span class="text">Technology reflects institutional intent</span>
     </div>
     <div class="row">
       <span class="num">14</span>
-      <span class="text">
-        Intelligence requires structure and constraint
-      </span>
+      <span class="text">Intelligence requires structure and constraint</span>
     </div>
     <div class="row">
       <span class="num">15</span>
-      <span class="text">
-        Engineering carries responsibility beyond optimization
-      </span>
+      <span class="text">Engineering carries responsibility beyond optimization</span>
     </div>
   </section>
 
@@ -243,15 +222,15 @@
     </div>
     <div class="row">
       <span class="num">17</span>
-      <a class="text" href="mailto:hi@sreeman.io">Email</a>
+      <a class="text" href="mailto:sreeman@sreeman.io">Email</a>
     </div>
     <div class="row">
       <span class="num">18</span>
-      <a class="text" href="https://x.com/sreemanrp">Twitter</a>
+      <a class="text" href="https://x.com/sreemanrp" target="_blank">Twitter</a>
     </div>
     <div class="row">
       <span class="num">19</span>
-      <a class="text" href="https://linkedin.com/in/sreemanrp">LinkedIn</a>
+      <a class="text" href="https://linkedin.com/in/sreemanrp" target="_blank">LinkedIn</a>
     </div>
   </section>
 
