--- a/test.html
+++ b/test.html
@@ -3,9 +3,18 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Sreeman Reddy</title>
+<title>Sreeman</title>
 
 <style>
+/* Palantir Alliance Font */
+@font-face {
+  font-family: "AllianceNo2";
+  src: url("https://www.palantir.com/fonts/Alliance/AllianceNo2-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --bg: #ffffff;
   --text: #2a2a2a;
@@ -21,7 +30,7 @@ body {
   margin: 0;
   background: var(--bg);
   color: var(--text);
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+  font-family: "AllianceNo2", ui-serif, Georgia, "Times New Roman", serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -42,12 +51,13 @@ main {
   text-align: right;
   font-size: 13px;
   color: var(--nums);
-  flex-shrink: 0;
+  font-family: "AllianceNo2", ui-serif, Georgia, serif;
 }
 
 .name {
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 22px;
+  font-weight: normal;
+  font-family: "AllianceNo2", ui-serif, Georgia, serif;
 }
 
 .location {
@@ -59,20 +69,23 @@ main {
 .role,
 .company,
 a {
-  font-size: 16px;
+  font-size: 17px;
   line-height: 1.7;
+  font-family: "AllianceNo2", ui-serif, Georgia, serif;
 }
 
 .section-title {
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 17px;
+  font-weight: normal;
   color: var(--muted);
+  font-family: "AllianceNo2", ui-serif, Georgia, serif;
 }
 
 .years {
   margin-left: auto;
   font-size: 13px;
   color: var(--muted);
+  font-family: "AllianceNo2", ui-serif, Georgia, serif;
 }
 
 .gap {
@@ -102,12 +115,12 @@ a:hover {
   .role,
   .company,
   a {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.75;
   }
 
   .name {
-    font-size: 19px;
+    font-size: 20px;
   }
 
   .years {
@@ -186,7 +199,7 @@ a:hover {
 
   <div class="line">
     <span class="ln">12</span>
-    <a href="mailto:hi@sreeman.io">Email</a>
+    <a href="mailto:sreeman@sreeman.io">Email</a>
   </div>
 
   <div class="line">
