--- a/test.html
+++ b/test.html
@@ -1,179 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sreeman Reddy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SREEMAN REDDY</title>
 
-  <meta name="author" content="Sreeman" />
-  <meta name="description" content="AI Engineer" />
-  <meta name="keywords" content="AI, Tech, TypeScript, JavaScript, React, Tailwind CSS" />
-
-  <link rel="author" href="https://sreeman.io" />
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/sreemanrp/sreeman.io/main/Assets/Images/favicon.ico" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap" rel="stylesheet">
 
   <style>
+    :root {
+      --bg: #ffffff;
+      --text-primary: #000000;
+      --text-muted: #7d8287;
+    }
+
     * {
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
     }
 
     body {
-      margin: 0;
-      font-family: "JetBrains Mono", monospace;
-      background: #ffffff;
-      color: #111111;
+      background: var(--bg);
+      font-family: 'IBM Plex Mono', monospace;
+      padding: 80px 120px;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
     }
 
-    main {
-      padding: 32px 24px;
-      max-width: 520px;
-    }
-
-    .top-links {
-      margin-bottom: 48px;
-      font-weight: 300;
-      display: flex;
-      gap: 12px;
+    .content {
+      max-width: 820px;
+      font-size: 19px;
+      line-height: 1.75;
+      color: var(--text-primary);
     }
 
     a {
-      color: inherit;
-      text-decoration: underline;
-      text-underline-offset: 4px;
+      color: var(--text-muted);
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
+      transition: border 0.2s ease;
     }
 
-    section {
-      margin-bottom: 56px;
+    a:hover {
+      border-bottom: 1px solid var(--text-muted);
     }
 
-    h2 {
-      font-size: 16px;
-      font-weight: 300;
-      margin: 0 0 12px;
+    .links {
+      margin-top: 60px;
+      font-size: 15px;
+      color: var(--text-muted);
+      line-height: 1.8;
     }
 
-    p {
-      margin: 0;
-      line-height: 1.6;
+    .links a {
+      color: var(--text-muted);
     }
 
-    .muted {
-      margin-top: 8px;
-      color: #666666;
-      font-size: 14px;
+    .links a:hover {
+      border-bottom: 1px solid var(--text-muted);
     }
 
-    .newsletter {
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    .newsletter input {
-      width: 210px;
-      height: 28px;
-      padding: 0 8px;
-      border: 1px solid #e5e7eb;
-      font-family: inherit;
-      font-size: 14px;
-    }
-
-    .newsletter button {
-      height: 28px;
-      padding: 0 12px;
-      border: 1px solid #9ca3af;
-      background: #e5e5e5;
-      font-family: inherit;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    .sponsors {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 28px 32px;
-      margin-top: 24px;
-    }
-
-    .sponsor {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .sponsor img {
-      width: 36px;
-      height: 36px;
-      border-radius: 10px;
-      flex-shrink: 0;
-    }
-
-    @media (max-width: 640px) {
-      main {
-        max-width: 100%;
+    /* Mobile */
+    @media (max-width: 768px) {
+      body {
+        padding: 50px 30px;
       }
 
-      .sponsors {
-        grid-template-columns: 1fr;
+      .content {
+        font-size: 16px;
+      }
+
+      .links {
+        font-size: 14px;
+        margin-top: 40px;
       }
     }
   </style>
 </head>
-
 <body>
-  <main>
-    <nav class="top-links">
-      <a href="#">sreeman</a>
-      <a href="https://x.com/sreemanrp" target="_blank" rel="noopener">twitter</a>
-      <a href="https://github.com/sreemanrp" target="_blank" rel="noopener">github</a>
-    </nav>
 
-    <section>
-      <h2>sreeman/newsletter</h2>
-      <form
-        class="newsletter"
-        action="https://app.loops.so/api/newsletter-form/3b769e71a4ebfbea5d935db810664fe1"
-        method="post"
-      >
-        <input type="email" name="email" placeholder="m@example.com" required />
-        <button type="submit">Sign up</button>
-      </form>
-      <p class="muted">1K+ subscribers</p>
-    </section>
+  <div class="content">
+    I'M AN AI ENGINEER BUILDING FAST, INTENTIONAL, AND EFFORTLESS TOOLS.
+    CURRENTLY BUILDING 
+    <a href="https://seezy.com" target="_blank">SEEZY</a>,
+    AN ENTERPRISE SOFTWARE COMPANY SPECIALIZING IN BIG DATA ANALYTICS,
+    DATA INTEGRATION, AND ARTIFICIAL INTELLIGENCE.
+  </div>
 
-    <section>
-      <h2>sreeman/ai</h2>
-      <p>
-        <a href="https://github.com/sreemanrp/ai" target="_blank" rel="noopener">
-          If you're looking for sreeman/ai,<br />
-          you can find it here
-        </a>.
-      </p>
-    </section>
+  <div class="links">
+    X — <a href="https://x.com/sreemanrp" target="_blank">@SREEMANRP</a><br>
+    EMAIL — <a href="mailto:sreeman@seezy.com">SREEMAN@SEEZY.COM</a>
+  </div>
 
-    <section>
-      <h2>Top Sponsors</h2>
-      <div class="sponsors">
-        <div class="sponsor">
-          <img src="https://github.com/l0kireddy.png" alt="Lokesh Reddy" />
-          <a href="https://github.com/l0kireddy" target="_blank" rel="noopener">Lokesh Reddy</a>
-        </div>
-
-        <div class="sponsor">
-          <img src="https://github.com/YogiSriGanesh2004.png" alt="Yogi" />
-          <a href="https://github.com/YogiSriGanesh2004" target="_blank" rel="noopener">Yogi</a>
-        </div>
-
-        <div class="sponsor">
-          <img src="https://github.com/SesaankPotharlanka.png" alt="Sesaank" />
-          <a href="https://github.com/SesaankPotharlanka" target="_blank" rel="noopener">Sesaank</a>
-        </div>
-      </div>
-    </section>
-  </main>
 </body>
 </html>
