--- a/test.html
+++ b/test.html
@@ -89,8 +89,8 @@
   </div>
 
   <div class="links">
-    X — <a href="https://x.com/sreemanrp" target="_blank">@SREEMANRP</a><br>
-    EMAIL — <a href="mailto:sreeman@seezy.com">SREEMAN@SEEZY.COM</a>
+    X - <a href="https://x.com/sreemanrp" target="_blank">@SREEMANRP</a><br>
+    EMAIL - <a href="mailto:sreeman@seezy.com">SREEMAN@SEEZY.COM</a>
   </div>
 
 </body>
